# pause-health.ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SMOKE_TEST_RESULTS.md  app.py  docker-compose.yml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  frontend-check.yml  lighthouse-nightly.yml  render-deploy.yml  vercel-preview.yml
.sf-deploy/manifest/: package.xml
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/scripts/: smoke.mjs
cli/src/: cli.ts
data-cloud/: Pause_HRV_RMSSD_30d.sql  Pause_Sleep_Disruption_7d.sql  Pause_Vasomotor_Burden_30d.sql  Pause_Wearable_Feature.dlo-schema.json  README.md  _mock_path.sql
docs/: AGENTFORCE_PROVIDER_ACTION_RUNBOOK.md  AGENTFORCE_VOICE_RUNBOOK.md  FLEX_GATEWAY_RUNBOOK.md  HEADLESS_360_RUNBOOK.md  JHE_REAL_RUN_2026-06-16.md  JHE_SETUP_RUNBOOK.md  MULESOFT_API_MANAGER_RUNBOOK.md  MULESOFT_PHASE_1_HANDOFF.md  MULESOFT_PHASE_2_DATA_CLOUD.md  MULESOFT_RUNBOOK.md  PHASE_2_ACTIVATION_CHECKLIST.md  PHASE_2_INGESTION_API_RUNBOOK.md  PHASE_3_RUNBOOK.md  PROVIDER_GRAPH_PHASE_1_RUNBOOK.md  SF_PLATFORM_EVENT_SINK_RUNBOOK.md  branch-protection.md  jupyterhealth-integration.md  mulesoft-integration.md
frontend/: .env.example  .gitignore  README.md  lighthouserc.json  next.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
frontend/components/: acquisition-funnel-panel.tsx  advance-care-planning-panel.test.ts  advance-care-planning-panel.tsx  adverse-event-reporting-panel.test.ts  adverse-event-reporting-panel.tsx  agentforce-embed.test.ts  agentforce-embed.tsx  agentforce-fallback.tsx  agentforce-voice-button.tsx  assessment-panel.test.ts  assessment-panel.tsx  benefits-panel.test.ts  benefits-panel.tsx  care-coordination-handoff-panel.test.ts  care-coordination-handoff-panel.tsx  care-detail-stage.tsx  care-gap-panel.test.ts  care-gap-panel.tsx  care-plan-panel.test.ts  care-plan-panel.tsx  care-routing-stage.tsx  care-team-management-panel.test.ts  care-team-management-panel.tsx  chat-to-care-router-handoff.test.ts  chat-to-care-router-handoff.tsx  claims-adjudication-panel.test.ts  claims-adjudication-panel.tsx  clinical-summary-panel.test.ts  clinical-summary-panel.tsx  clinical-trials-panel.test.ts  clinical-trials-panel.tsx  complex-care-management-panel.test.ts  complex-care-management-panel.tsx  consent-management-panel.test.ts  consent-management-panel.tsx  contact-form.tsx  data-sharing-tefca-panel.test.ts  data-sharing-tefca-panel.tsx  demo-shell-nav.tsx  demo-shell.tsx  (+49 more)
frontend/docs/: menopause-clinical-decision-support-proposal.html  menopause-clinical-decision-support-proposal.md  open-source-integration-strategy.md
frontend/lib/: a2a.test.ts  a2a.ts  advance-care-planning.test.ts  advance-care-planning.ts  adverse-event-reporting.test.ts  adverse-event-reporting.ts  agent-fabric.test.ts  agent-fabric.ts  agent-funnel.test.ts  agent-funnel.ts  agentforce-provider-oas.contract.test.ts  agentforce-voice.test.ts  agentforce-voice.ts  agentforce.test.ts  agentforce.ts  anti-bot.test.ts  anti-bot.ts  assessments.test.ts  assessments.ts  benefits.test.ts  benefits.ts  care-coordination-handoff.test.ts  care-coordination-handoff.ts  care-gaps.test.ts  care-gaps.ts  care-plan.test.ts  care-plan.ts  care-router-pathways.test.ts  care-router-pathways.ts  care-router.test.ts  care-router.ts  care-team-management.test.ts  care-team-management.ts  claims-adjudication.test.ts  claims-adjudication.ts  clinical-summary.test.ts  clinical-summary.ts  clinical-trials.test.ts  clinical-trials.ts  complex-care-management.test.ts  (+71 more)
frontend/public/: agentforce-probe.html  security.txt
frontend/scripts/: grounding-smoke.mjs  preflight.mjs  (+3 more)
jhe-local/: .gitignore  bootstrap.sh  teardown.sh
lighthouse-history/: README.md
mcp/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mulesoft/: README.md  pause-provider-experience-api.oas3.yaml
pause_ingest/: .env.example  README.md  pyproject.toml
pause_ingest/examples/: data_cloud_preflight.py  data_cloud_push.py  data_cloud_verify.py  oura_sample_upload.py
pause_ingest/examples/fixtures/: dhdr_ibi_sample.csv  oura_heart_rate_sample.json
pause_ingest/pause_ingest/: __init__.py  cohort.py  config.py  convert.py  data_cloud.py  empatica.py  exchange.py  expected.py  features.py  features_sleep.py  features_vasomotor.py  fhir.py
pause_ingest/tests/: conftest.py  jhe_mock_server.py  test_cohort.py  test_convert.py  test_data_cloud.py  test_exchange_integration.py  test_exchange_real_jhe.py  test_expected.py  test_features.py  test_features_sleep.py  test_features_vasomotor.py  test_fhir.py  test_preflight.py  test_verify.py
provider_ingest/: README.md  pyproject.toml
provider_ingest/examples/: regen_demo_directory.py
provider_ingest/examples/fixtures/: ca_sanctions_sample.csv  mscp_npis.json  nppes_sample.csv  ny_opmc_sample.csv  tx_tmb_sample.csv
provider_ingest/provider_ingest/: __init__.py  build.py  centroids.py  insurance.py  mscp.py  nppes.py  records.py  sanctions.py  score.py  signals.py  taxonomy.py
provider_ingest/scripts/: refresh_national.sh
provider_ingest/tests/: test_build.py  test_centroids.py  test_insurance.py  test_mscp.py  test_nppes.py  test_sanctions.py  test_score.py  test_signals.py  test_taxonomy.py
salesforce/: README.md  deploy.sh  retrieve.sh  sfdx-project.json
scripts/: build_journal.py
tests/: test_quote_by_zip.py
(+304 files in other folders)
