[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pause-ingest"
version = "0.1.0"
description = "Pause-Health.ai wearable ingest worker (omh-shim → JupyterHealth Exchange)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pause-Health.ai" }]
license = { text = "Apache-2.0" }
dependencies = [
  # JupyterHealth Python client used to read observations and obtain tokens.
  "jupyterhealth-client>=0.1",
  # omh-shim is published on GitHub (not yet on PyPI). Pin to v1.0.1 per its README.
  "omh-shim @ git+https://github.com/jupyterhealth/omh-shim.git@v1.0.1",
  # FLIRT: feature generation toolkit from the DBDP / im-ethz ecosystem.
  # Sliding-window HRV / EDA / ACC features from raw wearable data.
  "flirt>=0.0.2",
  # Scientific stack (also pulled in transitively by flirt, but explicit here).
  "numpy>=2.0",
  "pandas>=2.0",
  # HTTP client for FHIR POSTs; the JHE client doesn't write Observations directly.
  "httpx>=0.27",
  # Config from environment.
  "python-dotenv>=1.0",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
pause-ingest-smoke = "pause_ingest.examples.oura_sample_upload:main"
pause-dc-push = "examples.data_cloud_push:main"
pause-dc-verify = "examples.data_cloud_verify:main"

[tool.setuptools.packages.find]
include = ["pause_ingest*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "real_jhe: opt-in test that requires a live JupyterHealth Exchange instance configured via .env. Enable with PAUSE_USE_REAL_JHE=1.",
]
